# humre

./: pyproject.toml
src/humre/: __init__.py
tests/: test_humre.py
